--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "eslint": "^8.56.0",
     "eslint-config-next": "^15.2.4",
+    "geist": "^1.3.1",
     "next": "^15.2.4",
     "next-themes": "^0.2.1",
+    "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
