--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "^15.2.4",
+    "framer-motion": "^12.6.2",
     "geist": "^1.3.1",
+    "lucide-react": "^0.485.0",
+    "motion": "^12.6.2",
     "next": "^15.2.4",
     "next-themes": "^0.2.1",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass": "^1.86.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
