--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "sass": "^1.86.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
